@@ -368,6 +368,7 @@ print $jfed_script_text;
 
 <!-- This belongs in the header, probably -->
 <script>
+var jacks_app_expanded = false;
 var slice= "<?php echo $slice_id ?>";
 var renew_slice_privilege= "<?php echo $renew_slice_privilege?>";
 var slice_expiration= "<?php echo $slice_expiration?>";
