@@ -14,6 +14,7 @@
   * Make site names black not white (#1321)
   * Remove previous <ip> tags when doing 
     ip_auto_assignment (#1319)
+  * jacks-app-expanded (viewer) has 'back' button (#1310).
 
 == 2.27 ==
  * Progress on #299 and #1120, remove dead code.
